[gd_scene load_steps=7 format=3 uid="uid://d0yg1xr46lje1"]

[ext_resource type="Texture2D" uid="uid://dfbjiv0yj88kh" path="res://Photos/ProtoType2.jpeg" id="1_3527d"]
[ext_resource type="Script" uid="uid://brm7p6gshbjpu" path="res://game_play_scene.gd" id="1_xdn27"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_3527d"]

[sub_resource type="Theme" id="Theme_3527d"]
default_font_size = 20

[sub_resource type="Theme" id="Theme_mf4hc"]
default_font_size = 30
HeaderLarge/fonts/font = null

[sub_resource type="Theme" id="Theme_a7xop"]

[node name="GamePlayScene" type="Node2D"]
script = ExtResource("1_xdn27")

[node name="ProtoType3" type="Sprite2D" parent="."]
position = Vector2(856, 330)
scale = Vector2(2.5159576, 2.9906542)
texture = ExtResource("1_3527d")

[node name="WordLabel" type="Label" parent="."]
material = SubResource("CanvasItemMaterial_3527d")
offset_left = 32.0
offset_top = 96.0
offset_right = 511.0
offset_bottom = 172.0
theme = SubResource("Theme_3527d")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GuessedLetters" type="Label" parent="."]
offset_left = 57.0
offset_top = 507.0
offset_right = 517.0
offset_bottom = 578.0

[node name="Letters" type="GridContainer" parent="."]
offset_left = 55.0
offset_top = 245.0
offset_right = 408.0
offset_bottom = 413.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 9

[node name="A" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "A"

[node name="B" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "B"

[node name="C" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "C"

[node name="D" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "D"

[node name="E" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "E"

[node name="F" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "F"

[node name="G" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "G"

[node name="H" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "H"

[node name="I" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "I"

[node name="J" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "J"

[node name="K" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "K"

[node name="L" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "L"

[node name="M" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "M"

[node name="N" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "N"

[node name="O" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "O"

[node name="P" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "P"

[node name="Q" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "Q"

[node name="R" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "R"

[node name="S" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "S"

[node name="T" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "T"

[node name="U" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "U"

[node name="V" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "V"

[node name="W" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "W"

[node name="X" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "X"

[node name="Y" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "Y"

[node name="Z" type="Button" parent="Letters"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_mf4hc")
theme_override_font_sizes/font_size = 30
text = "Z"

[node name="DayFrame" type="Label" parent="."]
offset_left = 38.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 51.0
theme = SubResource("Theme_a7xop")
theme_type_variation = &"HeaderLarge"
text = "Day 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UndoButton" type="Button" parent="."]
offset_left = 53.0
offset_top = 422.0
offset_right = 200.0
offset_bottom = 477.0
text = "UNDO
"

[node name="LosePanel" type="Panel" parent="."]
offset_left = 641.0
offset_top = 123.0
offset_right = 1077.0
offset_bottom = 451.0

[node name="Title" type="Label" parent="LosePanel"]
layout_mode = 0
offset_left = 61.0
offset_top = 76.0
offset_right = 359.0
offset_bottom = 145.0

[node name="ContinueButton" type="Button" parent="LosePanel"]
layout_mode = 0
offset_left = 269.0
offset_top = 283.0
offset_right = 414.0
offset_bottom = 319.0
text = "Continue"

[node name="ReturnMain" type="Button" parent="LosePanel"]
layout_mode = 0
offset_left = 35.0
offset_top = 282.0
offset_right = 208.0
offset_bottom = 317.0
text = "Return to Main Menu"

[connection signal="pressed" from="LosePanel/ReturnMain" to="." method="_on_return_main_pressed"]
